Fix icon alignment bug & firefox input bug
- Vertical icon spacing looked weird between Chrome & Firefox
- Text was getting clipped in inputs in Firefox

--- a/scss/includes/_input-container.scss
+++ b/scss/includes/_input-container.scss
@@ -52,6 +52,7 @@
   font-size: 1.125em;
   font-weight: 300;
   line-height: 1em;
+  height: auto; // Firefox/Bootstrap fix: http://stackoverflow.com/a/24449464
   outline: none;
   padding: 1em 0 0.5em 0;
 }
@@ -256,9 +257,9 @@
 .input_container > input[type='email'] ~ .svg_icon,
 .input_container > input[type='password'] ~ .svg_icon {
   fill: #757575;
-  height: 1.25em;
+  height: auto;
   left: 0;
-  margin-top: 0.5em;
+  margin-top: 1em;
   position: absolute;
   top: 0;
   width: 1.25em;
